@@ -149,6 +149,15 @@ implementations are also usable as single-element
       used to load the resource, constructed from the specified classpath.</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">parentFirst</td>
+    <td valign="top">Whether to consult the parent classloader first -
+      the parent classloader most likely is the system classloader -
+      when using a nested classpath.  Defaults
+      to <code>true</code>.<br/>
+      <em>Since Ant 1.8.0</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <p>The classpath can also be specified as nested classpath element,
