@@ -1,0 +1,62 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one or more
+   contributor license agreements.  See the NOTICE file distributed with
+   this work for additional information regarding copyright ownership.
+   The ASF licenses this file to You under the Apache License, Version 2.0
+   (the "License"); you may not use this file except in compliance with
+   the License.  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
+<project default="antunit" xmlns:au="antlib:org.apache.ant.antunit">
+
+  <import file="../../antunit-base.xml"/>
+
+  <target name="setUp">
+    <mkdir dir="${output}"/>
+  </target>
+
+  <target name="testUsesSystemClasspath" depends="setUp">
+    <copy todir="${output}">
+      <javaresource name="org/apache/tools/ant/antlib.xml"/>
+    </copy>
+    <au:assertFileExists file="${output}/org/apache/tools/ant/antlib.xml"/>
+  </target>
+
+  <target name="-setUpAntlibXmlInInput" depends="setUp">
+    <mkdir dir="${input}/org/apache/tools/ant"/>
+    <echo file="${input}/org/apache/tools/ant/antlib.xml">Hello, world!</echo>
+  </target>
+
+  <target name="testParentFirstIsDefault" depends="-setUpAntlibXmlInInput">
+    <copy todir="${output}">
+      <javaresource name="org/apache/tools/ant/antlib.xml">
+        <classpath location="${input}"/>
+      </javaresource>
+    </copy>
+    <au:assertFileExists file="${output}/org/apache/tools/ant/antlib.xml"/>
+    <au:assertFilesDiffer
+       expected="${input}/org/apache/tools/ant/antlib.xml"
+       actual="${output}/org/apache/tools/ant/antlib.xml"/>
+  </target>
+
+  <target name="testParentFirstFalse" depends="-setUpAntlibXmlInInput">
+    <copy todir="${output}">
+      <javaresource name="org/apache/tools/ant/antlib.xml"
+                    parentFirst="false">
+        <classpath location="${input}"/>
+      </javaresource>
+    </copy>
+    <au:assertFileExists file="${output}/org/apache/tools/ant/antlib.xml"/>
+    <au:assertFilesMatch
+       expected="${input}/org/apache/tools/ant/antlib.xml"
+       actual="${output}/org/apache/tools/ant/antlib.xml"/>
+  </target>
+</project>
